More and more styling for AtlantaFX.